--- a/views/images.erb
+++ b/views/images.erb
@@ -1,4 +1,7 @@
 <section id="splash" class="container">
     <img src="<%= @image %>" alt="Paysage de Saint-Camille par l’artiste Hektor">
+    <h2>
+        Description de l'image
+    </h2>
 </section>
 <footer></footer>
