--- a/views/oeuvres.erb
+++ b/views/oeuvres.erb
@@ -1,4 +1,4 @@
-<section class="container">
+<section id="oeuvres" class="container">
     <div class="grid">
         <div class="grid-sizer" style="width: 19%"></div>
         <div class="gutter-sizer" style="width: 1%"></div>
@@ -11,8 +11,8 @@
 var oeuvres = <%= @oeuvres %>,
     grid, msnry,
     chargement_termine = false,
-    en_travail = {
-        etat: false
-    };
+    en_travail = { etat: false };
+
+console.log(oeuvres);
 
 </script>
