style oeuvres ok

--- a/views/oeuvres.erb
+++ b/views/oeuvres.erb
@@ -1,16 +1,10 @@
 <section id="oeuvres" class="container">
-    <div class="grid">
-        <div class="grid-sizer" style="width: 19%"></div>
-        <div class="gutter-sizer" style="width: 1%"></div>
-    </div>
+    <div class="grid"> </div>
 </section>
 <footer class="container">
 </footer>
 <script type="text/javascript">
-
-var oeuvres = <%= @oeuvres %>,
-    grid, msnry,
-    chargement_termine = false,
-    en_travail = { etat: false };
-
+    var oeuvres = <%= @oeuvres %>,
+        grid, msnry,
+        chargement_termine = false;
 </script>
