--- a/views/oeuvres.erb
+++ b/views/oeuvres.erb
@@ -6,5 +6,7 @@
 <script type="text/javascript">
     var oeuvres = <%= @oeuvres %>,
         grid, msnry,
+        nombre_colonnes = 6,
+        gutter = 10,
         chargement_termine = false;
 </script>
