--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,8 @@
-<section id="splash" class="container">
-    <img src="<%= @image %>" alt="Paysage de Saint-Camille par l’artiste Hektor">
+<section class="container" style="margin-top: 180px;">
+    <h1 style="margin: 0 auto; width: 75%; margin-bottom: 20px;"> <img src="/images/HEKTOR_LOGO_VERT.jpg" style="width: 100%" alt="Logo Hektor"> </h1>
+    <h2 style="margin: 0 auto; width: 70%; text-align: center; color: #e0f2e9; font-size: 3rem; margin-bottom: 20px;"> Hektor sera en ligne le 26 juillet 2019 </h2>
+    <p style="margin: 0 auto; width: 70%; text-align: center; color: black; font-size: 2rem; margin-bottom: 20px;"> Hektor est un bot numérique qui réalise des oeuvres à partir de photographies de Saint-Camille créées par l'artiste Isabelle Gagné ainsi que celles captées via un photomaton, par texto ou courriel </p>
 </section>
-<footer></footer>
+<footer>
+    <img src="/images/logo_eim.png" style="display: block; margin: 0 auto; width: 25px;" alt="Logo EIM">
+</footer>
