--- a/views/info.erb
+++ b/views/info.erb
@@ -1,4 +1,4 @@
-<section class="container">
+<section>
     <article id="pratique">
         <div class="item">
             <h2>À propos du projet</h2>
@@ -13,8 +13,8 @@
         </div>
     </article>
 </section>
-<footer class="container">
-    <div class="credits petit-texte">
+<footer>
+    <div class="credits">
         L'artiste tient à remercier... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tristique
     </div>
 </footer>
