--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<section id="splash" class="container">
+<section id="splash">
     <img src="<%= @image %>" alt="Paysage de Saint-Camille par l’artiste Hektor">
 </section>
 <footer></footer>
