--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,6 +9,13 @@
 <link href='https://fonts.googleapis.com/css?family=IBM+Plex+Mono' rel='stylesheet'>
 
 <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+<!--[if lte IE 8]>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-old-ie-min.css">
+    <![endif]-->
+    <!--[if gt IE 8]><!-->
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-min.css">
+    <!--<![endif]-->
+
 <link rel="stylesheet" type="text/css" href="/css/mobile.css">
 <link rel="stylesheet" type="text/css" href="/css/desktop.css">
 
@@ -38,25 +45,24 @@
     </div>
     <div id="menu">
         <div class="pure-g">
-        <div id="sections-information" class="pure-u-1-3">
-            <ul id="liens">
-                <li style="margin-right: 25px;"><a href='/bio'>bio + démarche</a></li>
-                <li><a href='/oeuvres'>oeuvres</a></li>
-            </ul>
-        </div>
-        <div class="pure-u-1 pure-u-md-1-3">
-            <h1 style="text-align: center;">
-                <a href="/">
-                    <span class="helper"></span>
-                    <img id="logo" src="/images/logo_hektor.png">
-                </a>
-            </h1>
-        </div>
-        <div id="aide" class="pure-u-1-3">
-            <ul>
-                <li><a href='/info'>?</a></li>
-            </ul>
-        </div>
+            <div id="sections-information" class="pure-u-1-3">
+                <ul class="centrerY" style="padding: 0;">
+                    <li style="margin-right: 25px;"><a href='/bio'>bio + démarche</a></li>
+                    <li><a href='/oeuvres'>oeuvres</a></li>
+                </ul>
+            </div>
+            <div id="logo-container" class="pure-u-md-1-3">
+                <h1>
+                    <a href="/">
+                        <img id="logo" class="centrerXY" src="/images/logo_hektor.png">
+                    </a>
+                </h1>
+            </div>
+            <div id="aide" class="pure-u-1-3">
+                <ul class="centrerY" style="padding: 0; right: 0;">
+                    <li><a href='/info'>?</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </header>
