--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,27 +21,39 @@
 
 <% if @env["PATH_INFO"].match(/oeuvres/) %>
     <link rel="stylesheet" type="text/css" href="/css/oeuvres.css">
-<script src="/lib/masonry.pkgd.min.js"></script>
-<script src="/lib/grille-images.js"></script>
-    <% end %>
+    <script src="/lib/masonry.pkgd.min.js"></script>
+    <script src="/lib/grille-images.js"></script>
+<% end %>
 
 <% if @env["PATH_INFO"].match(/bio/) %>
     <link rel="stylesheet" type="text/css" href="/css/bio.css">
-    <% end %>
+<% end %>
 
 <% if @env["PATH_INFO"].match(/paysages/) %>
     <link rel="stylesheet" type="text/css" href="/css/paysages.css">
-    <% end %>
+<% end %>
 
 <% if @env["PATH_INFO"].match(/info/) %>
     <link rel="stylesheet" type="text/css" href="/css/info.css">
-    <% end %>
+<% end %>
 </head>
 <body>
 <header>
+    <div id="menu-responsive">
+        <div class="pure-g">
+            <div class="pure-u-1-3 centrerY-texte" style="text-align: left;">
+                <a href="/bio">bio + démarche</a>
+            </div>
+            <div class="pure-u-1-3 centrerY-texte" style="text-align: center;">
+                <a href="/oeuvres">oeuvres</a>
+            </div>
+            <div class="pure-u-1-3 centrerY-texte" style="text-align: right;">
+                <a href="/aide">?</a>
+            </div>
+        </div>
+    </div>
     <div id="hamburger">
-        <span class="helper"></span>
-        <img src="/images/hamburger.png" alt="menu responsive">
+        <img src="/images/hamburger.png" class="centrerY" alt="menu responsive" onclick="toggleAffichageMenu()">
     </div>
     <div id="menu">
         <div class="pure-g">
@@ -67,5 +79,10 @@
     </div>
 </header>
 <%= yield %>
+<script type="text/javascript">
+function toggleAffichageMenu () {
+    document.getElementById("menu-responsive").classList.toggle("affiche");
+}
+</script>
 </body>
 </html>
