--- a/views/layout.erb
+++ b/views/layout.erb
@@ -40,15 +40,15 @@
 <body>
 <header>
     <div id="menu-responsive">
-        <div class="pure-g">
-            <div class="pure-u-1-3 centrerY-texte" style="text-align: left;">
+        <div class="flex">
+            <div class="centrerY-texte">
                 <a href="/bio">bio + démarche</a>
             </div>
-            <div class="pure-u-1-3 centrerY-texte" style="text-align: center;">
+            <div class="centrerY-texte">
                 <a href="/oeuvres">oeuvres</a>
             </div>
-            <div class="pure-u-1-3 centrerY-texte" style="text-align: right;">
-                <a href="/aide">?</a>
+            <div class="centrerY-texte">
+                <a href="/info">?</a>
             </div>
         </div>
     </div>
