--- a/views/layout.erb
+++ b/views/layout.erb
@@ -66,7 +66,7 @@
             <div id="logo-container" class="pure-u-md-1-3">
                 <h1>
                     <a href="/">
-                        <img id="logo" class="centrerXY" src="/images/logo_hektor.png">
+                        <img id="logo" class="centrerXY" src="<%= @logo %>">
                     </a>
                 </h1>
             </div>
