--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -20,6 +20,7 @@ header {
     height: inherit;
 
     font-size: 0.8em;
+    font-family: 'IBM Plex Mono';
 
     visibility: hidden;
     opacity: 0;
@@ -39,6 +40,10 @@ header {
 .affiche {
     visibility: visible !important;
     opacity: 1 !important;
+}
+
+a {
+    font-family: 'IBM Plex Mono';
 }
 
 #hamburger img {
