--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -23,7 +23,7 @@
 
     ul {
         list-style-type: none;
-        font-family: 'IBM Plex Mono';
+        font-family: 'IBM Plex Mono' !important;
     }
 
     .centrerXY {
