--- a/views/images.erb
+++ b/views/images.erb
@@ -1,7 +1,7 @@
 <section id="splash" class="container">
     <img src="<%= @image %>" alt="Paysage de Saint-Camille par l’artiste Hektor">
-    <h2 style="font-weight: normal; font-size: 1em;">
-        <%= p @image.match(/saintcamille_(\w{5})/)[1] %> - 2019. Paysage de Saint-Camille. | CC 4.0
+    <h2 style="font-weight: normal;">
+        <%= p @image.match(/saintcamille_(\w{5})/)[1] %> - 2019. Paysage de Saint-Camille. | <a href="https://creativecommons.org/licenses/by/4.0/deed">CC 4.0</a>
     </h2>
 </section>
 <footer></footer>
