navigation images desktop

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,6 +31,10 @@
 
 <% if @env["PATH_INFO"].match(/paysages/) %>
     <link rel="stylesheet" type="text/css" href="/css/paysages.css">
+    <script src="/lib/jquery-3.4.1.min.js"></script>
+    <script src="/lib/jquery.touch.js"></script>
+    <script src="/lib/jquery.swipe.js"></script>
+    <script src="/lib/paysages.js"></script>
 <% end %>
 
 <% if @env["PATH_INFO"].match(/info/) %>
