--- a/public/css/paysages.css
+++ b/public/css/paysages.css
@@ -3,3 +3,39 @@ h2 {
     font-size: 1.3em;
     margin-top: 50px;
 }
+
+@media screen and (min-width: 48em) {
+    #banner {
+        position: relative;
+    }
+
+    .nav-arrow {
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        width: 50px;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: opacity 1s;
+    }
+
+    #banner:hover > .nav-arrow {
+        opacity: 1;
+    }
+
+    .nav-arrow a {
+        width: 100%;
+    }
+
+    #nav-left {
+        left: 0;
+        background-image: linear-gradient(to right, white , rgba(0,0,0,0));
+    }
+
+    #nav-right {
+        right: 0;
+        background-image: linear-gradient(to left, white , rgba(0,0,0,0));
+    }
+}
