--- a/views/images.erb
+++ b/views/images.erb
@@ -1,5 +1,15 @@
-<section id="splash" class="container">
-    <img src="<%= @image %>" alt="Paysage de Saint-Camille par l’artiste Hektor">
+<section id="splash">
+    <div id="banner">
+        <div id="nav-left" class="nav-arrow">
+            <a href="<%= @prev %>"><img src="/images/arrow.svg" alt="fleche de navigation" style="transform: rotate(180deg);"></a>
+        </div>
+        <div class="pure-u-md-10-12">
+            <img src="<%= @image %>" alt="Paysage de Saint-Camille par l’artiste Hektor">
+        </div>
+        <div id="nav-right" class="nav-arrow">
+            <a href="<%= @next %>"><img src="/images/arrow.svg" alt="fleche de navigation"></a>
+        </div>
+    </div>
     <h2 style="font-weight: normal;">
         <%= p @image.match(/saintcamille_(\w{5})/)[1] %> - 2019. Paysage de Saint-Camille. | <a href="https://creativecommons.org/licenses/by/4.0/deed">CC 4.0</a>
     </h2>
