--- a/public/css/paysages.css
+++ b/public/css/paysages.css
@@ -4,20 +4,45 @@ h2 {
     margin-top: 50px;
 }
 
+#banner {
+    position: relative;
+}
+
+.nav-arrow {
+    position: absolute;
+    width: 5%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-arrow a {
+    width: 100%;
+}
+
+#nav-left {
+    left: 0;
+    z-index: 1;
+}
+
+#nav-right {
+    right: 0;
+    z-index: 2;
+}
+
+#presentation-image {
+    width: 90%;
+    margin: 0 auto;
+}
+
 @media screen and (min-width: 48em) {
-    #banner {
-        position: relative;
+    #presentation-image {
+        width: 100%;
     }
 
     .nav-arrow {
         opacity: 0;
-        position: absolute;
-        top: 0;
-        width: 50px;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         transition: opacity 1s;
     }
 
@@ -25,17 +50,11 @@ h2 {
         opacity: 1;
     }
 
-    .nav-arrow a {
-        width: 100%;
-    }
-
     #nav-left {
-        left: 0;
         background-image: linear-gradient(to right, white , rgba(0,0,0,0));
     }
 
     #nav-right {
-        right: 0;
         background-image: linear-gradient(to left, white , rgba(0,0,0,0));
     }
 }
