--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -98,8 +98,13 @@ header a {
 }
 
 /* -------- INDEX --------- */
+#splash {
+    display: flex;
+    justify-content: center;
+}
+
 #splash img {
-    width: 100%;
+    max-height: 70vh;
 }
 
 #splash h2 {
