--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
 <section id="splash">
-    <img src="<%= @image %>" alt="Paysage de Saint-Camille par l’artiste Hektor" style="max-height: 70vh;">
+    <img src="<%= @image %>" alt="Paysage de Saint-Camille par l’artiste Hektor">
 </section>
 <footer></footer>
