--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -101,10 +101,13 @@ header a {
 #splash {
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 70vh;
 }
 
 #splash img {
     max-height: 70vh;
+    max-width: 100%;
 }
 
 #splash h2 {
