--- a/views/images.erb
+++ b/views/images.erb
@@ -14,8 +14,9 @@
             <img src="<%= @image %>" alt="Paysage de Saint-Camille par l’artiste Hektor">
         </div>
     </div>
+</section>
+<footer>
     <h2 style="font-weight: normal;">
         <%= p @image.match(/saintcamille_(\w{5})/)[1] %> - 2019. Paysage de Saint-Camille. | <a href="https://creativecommons.org/licenses/by/4.0/deed">CC 4.0</a>
     </h2>
-</section>
-<footer></footer>
+</footer>
