--- a/views/images.erb
+++ b/views/images.erb
@@ -16,7 +16,7 @@
     </div>
 </section>
 <footer>
-    <h2 style="font-weight: normal;">
+    <h2 style="font-weight: normal; font-size: 1em;">
         <%= p @image.match(/saintcamille_(\w{5})/)[1] %> - 2019. Paysage de Saint-Camille. | <a href="https://creativecommons.org/licenses/by/4.0/deed">CC 4.0</a>
     </h2>
 </footer>
