--- a/public/css/paysages.css
+++ b/public/css/paysages.css
@@ -1,7 +1,8 @@
-h2 {
+.image-desc {
     text-align: center;
-    font-size: 1.3em;
     margin-top: 50px;
+    font-weight: normal;
+    font-size: 1em;
 }
 
 #banner {
