--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
+<meta name="description" content="Oeuvres de Gaston Gouin mises en valeur par l'artiste Isabelle Gagné dans la ville de Saint-Camille">
 
 <link href='https://fonts.googleapis.com/css?family=IBM+Plex+Mono' rel='stylesheet'>
 
@@ -68,11 +69,9 @@
                 </ul>
             </div>
             <div id="logo-container" class="pure-u-md-1-3">
-                <h1>
-                    <a href="/">
-                        <img id="logo" class="centrerXY" src="<%= @logo %>">
-                    </a>
-                </h1>
+                <a href="/">
+                    <img id="logo" class="centrerXY" src="<%= @logo %>" alt="Logo Hektor">
+                </a>
             </div>
             <div id="aide" class="pure-u-1-3">
                 <ul class="centrerY" style="padding: 0; right: 0;">
