Update meta description

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
-<meta name="description" content="Oeuvres de Gaston Gouin mises en valeur par l'artiste Isabelle Gagné dans la ville de Saint-Camille">
+<meta name="description" content="Oeuvre numérique Hektor avec poésie de Gaston Gouin par l’artiste Isabelle Gagné dans la village de Saint-Camille">
 
 <link href='https://fonts.googleapis.com/css?family=IBM+Plex+Mono' rel='stylesheet'>
 
